#76592 - Improvements Widget Statistics - updated ui design

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/StatisticsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/StatisticsInfo.cshtml
@@ -18,7 +18,7 @@
                                 <td>@Translation.Get("Pågående")</td>
                                 <td>@Translation.Get("Olästa")</td>
                                 <td>@Translation.Get("Vilande")</td>
-                                <td>@Translation.Get("Försenade")</td>
+                                <td>@Translation.Get("Förfallna")</td>
                             </tr>
                             <tr>
                                 <td id="st_inProgress"><i class="gif-loader" style="">&nbsp;</i></td>
@@ -28,9 +28,9 @@
                             </tr>
                             <tr>
                                 <td>@Translation.Get("Nya idag")</td>
-                                <td>@Translation.Get("Försenade idag")</td>
+                                <td>@Translation.Get("Förfaller idag")</td>
                                 <td>@Translation.Get("Lösta idag")</td>
-                                <td>@Translation.Get("Lösta i tid idag")</td>
+                                <td>@Translation.Get("Lösta i tid")</td>
                             </tr>
                             <tr>
                                 <td id="st_newToday"><i class="gif-loader" style="">&nbsp;</i></td>
