--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/CalendarsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/CalendarsInfo.cshtml
@@ -24,7 +24,7 @@
                 }
                 @if (Model.ShowMore)
                 {
-                    <div class="box-post" style="text-align: center">
+                    <div class="box-post more">
                         <a class="btn" href="@Url.Action("index", "calendar", new {area = ""})">>></a>
                     </div>
                 }
