--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/DocumentsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/DocumentsInfo.cshtml
@@ -31,7 +31,7 @@
                 }
                 @if (Model.ShowMore)
                 {
-                    <div class="box-post" style="text-align: center">
+                    <div class="box-post more">
                         <a class="btn" href="@Url.Action("index", "Document", new {area = ""})">>></a>
                     </div>
                 }
