--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/BulletinBoardInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/BulletinBoardInfo.cshtml
@@ -23,7 +23,7 @@
                 }
                 @if (Model.ShowMore)
                 {
-                    <div class="box-post" style="text-align: center">
+                    <div class="box-post more">
                         <a class="btn" href="@Url.Action("index", "bulletinboard", new {area = ""})">>></a>
                     </div>
                 }
