--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/OperationLogsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/OperationLogsInfo.cshtml
@@ -29,7 +29,7 @@
                 }            
                 @if (Model.ShowMore)
                 {
-                    <div class="box-post" style="text-align: center">
+                    <div class="box-post more">
                         <a class="btn" href="@Url.Action("index", "operationlog", new {area = ""})">>></a>
                     </div>
                 }
