#52742 - Change default value for widgets to show all - update links "more" design

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/BulletinBoardInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/BulletinBoardInfo.cshtml
@@ -24,7 +24,7 @@
                 @if (Model.ShowMore)
                 {
                     <div class="box-post more">
-                        <a class="btn" href="@Url.Action("index", "bulletinboard", new {area = ""})">>></a>
+                        <a href="@Url.Action("index", "bulletinboard", new {area = ""})">>></a>
                     </div>
                 }
             </div>
