--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/MyCasesInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/MyCasesInfo.cshtml
@@ -52,7 +52,7 @@
             @if (Model.ShowMore)
             {
                 <div class="more">
-                    <a class="btn" href="@Url.Action("AdvancedSearch", "Cases", new {area = "", clearFilters = true, currentUserAdmin = true})">>></a>
+                    <a href="@Url.Action("AdvancedSearch", "Cases", new {area = "", clearFilters = true, currentUserAdmin = true})">>></a>
                 </div>
             }
 
