--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/CalendarsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/CalendarsInfo.cshtml
@@ -25,7 +25,7 @@
                 @if (Model.ShowMore)
                 {
                     <div class="box-post more">
-                        <a class="btn" href="@Url.Action("index", "calendar", new {area = ""})">>></a>
+                        <a href="@Url.Action("index", "calendar", new {area = ""})">>></a>
                     </div>
                 }
             </div>
