--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/DailyReportsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/DailyReportsInfo.cshtml
@@ -20,7 +20,7 @@
                 @if (Model.ShowMore)
                 {
                     <div class="box-post more">
-                        <a class="btn" href="@Url.Action("index", "dailyreport", new {area = ""})">>></a>
+                        <a href="@Url.Action("index", "dailyreport", new {area = ""})">>></a>
                     </div>
                 }
             </div>
