--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/FaqInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/FaqInfo.cshtml
@@ -35,7 +35,7 @@
                         @if (Model.ShowMore)
                         {
                             <div class="box-post more">
-                                <a class="btn" href="@Url.Action("index", "faq", new {area = ""})">>></a>
+                                <a href="@Url.Action("index", "faq", new {area = ""})">>></a>
                             </div>
                         }
                     </div>
