--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/ProblemsInfo.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/ProblemsInfo.cshtml
@@ -24,7 +24,7 @@
                 @if (Model.ShowMore)
                 {
                     <div class="box-post more">
-                        <a class="btn" href="@Url.Action("index", "Problems", new {area = ""})">>></a>
+                        <a href="@Url.Action("index", "Problems", new {area = ""})">>></a>
                     </div>
                 }
             </div>
