--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Home/Index.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Home/Index.cshtml
@@ -88,16 +88,17 @@
         data-usermodules-position="@(GetModulePosition(Module.Problems))">
         @{
             Html.RenderPartial("ProblemsInfo", Model.ProblemModel);
-        }                                                                        
-    </div>                                        
+        }
+    </div>
     <div class="portlet statistics" 
         data-usermodules="item" 
         data-usermodules-moduleid="@(GetModuleId(Module.Statistics))"
         data-usermodules-position="@(GetModulePosition(Module.Statistics))">
-        @{
+        @if (Model.UserModules.Any(u => (Module)u.Module_Id == Module.Statistics && u.isVisible))
+        {
             Html.RenderPartial("StatisticsInfo", Model.StatisticsOverviews);
-        }                                                                                                        
-    </div>                                        
+        }
+    </div>
     <div class="portlet bulletinboard" 
         data-usermodules="item" 
         data-usermodules-moduleid="@(GetModuleId(Module.BulletinBoard))"        
