--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-filter/cases-filter.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-overview-module/components/cases-filter/cases-filter.component.html
@@ -2,5 +2,6 @@
   <mbsc-nav-item *ngFor="let item of menuItems; trackBy:trackByFn" 
       [id]="item.id"
       [selected]="item.selected"
+      [disabled]="item.disabled"
       (click)="applyFilter(item)">{{ item.text }}</mbsc-nav-item>
 </mbsc-hamburger-nav>
