--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -249,6 +249,13 @@ a {
 .case-search-filter {
   .mbsc-ms-item {
     padding-left:20px;
+    &.mbsc-disabled {
+      padding: 0;
+      text-transform: uppercase;
+      background: lightgray;
+      min-height: 1.5em;
+      font-weight: bolder;
+    }
   }
 
   .mbsc-ms-item-sel::before {
