--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_RowsOverview.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/_RowsOverview.cshtml
@@ -56,7 +56,7 @@
             </tr>
         </table>
     </div>
-    <table class="table table-striped table-bordered table-hover" id="tblCaseSolution">
+    <table class="table table-striped table-bordered table-hover table-fix" id="tblCaseSolution">
         <thead>
             <tr>
                 <th class="sortable" data-sort="@CaseSolutionIndexColumns.Name" data-asc="@_asc" style="cursor: pointer; cursor: hand; width: 15%">
