#77609 - Update case edit/create/view, get options and other methods to opened case customer instead of default - updated mobiscroll to 4.8.3 and fixed open edit case

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -253,8 +253,10 @@ a {
       padding: 0;
       text-transform: uppercase;
       background: lightgray;
+      padding-left: 5px;
       min-height: 1.5em;
       font-weight: bolder;
+      font-size: 12px;;
     }
   }
 
