--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/controls/case-files/case-files-control.component.html
@@ -8,6 +8,6 @@
       </mbsc-listview>
   </div>
    
-  <case-files-upload *ngIf="hasFullAccess" [caseKey]='caseKey' (NewFileUploadComplete)="processNewFileUpload($event)"></case-files-upload>
+  <case-files-upload *ngIf="hasFullAccess" [caseKey]='caseKey' [customerId]='customerId' (NewFileUploadComplete)="processNewFileUpload($event)"></case-files-upload>
   
 </div>
