--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-actions/case-actions.component.html
@@ -21,7 +21,7 @@
       <div class="actions-main">
         <mbsc-listview *ngIf="group.hasMain" [swipe]="false" [enhance]="true">
           <mbsc-listview-item *ngFor="let action of group.Actions | actionsFilter:'main';trackBy:getTrackId">
-              <case-action-container [caseKey]="caseKey" [caseAction]="action"></case-action-container>
+              <case-action-container [caseKey]="caseKey" [customerId]="customerId" [caseAction]="action"></case-action-container>
           </mbsc-listview-item>
         </mbsc-listview>
       </div>
@@ -32,7 +32,7 @@
             <mbsc-form-group-content>
             <mbsc-listview [swipe]="false" [enhance]="true">
                 <mbsc-listview-item *ngFor="let action of group.Actions | actionsFilter:'other';trackBy:getTrackId">
-                    <case-action-container [caseKey]="caseKey" [caseAction]="action"></case-action-container>
+                    <case-action-container [caseKey]="caseKey" [customerId]="customerId" [caseAction]="action"></case-action-container>
                 </mbsc-listview-item>
             </mbsc-listview>
           </mbsc-form-group-content>
