--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/content/styles/styles.scss
@@ -521,3 +521,21 @@ case-menu {
     }
   }
 }
+
+case-template {
+  .mbsc-lv-item {
+    &.disabled {
+      text-transform: uppercase;
+      background-color: #efeff4;
+      padding: 5px;
+      min-height: 1.5em;
+      font-weight: 400;
+      font-size: 12px;
+      color: #6e6e72;
+      opacity: 1;
+    }
+    &:before, &:after {
+      left: 0 !important
+    }
+  }
+}
